JDK 22: added example of FFM API to call native code